# powerlifting_bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dashboard  README.md  docker-compose.yml  pyproject.toml
config/: exercises.yaml  settings.yaml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: client.ts  pl_client.ts  pl_types.ts  types.ts
dashboard/src/components/: CalendarHeatmap.tsx  E1RMTrend.tsx  FrequencyHeatmap.tsx  IntensityLine.tsx  KpshByMuscleBar.tsx  KpshByPatternBar.tsx  KpshStackedBar.tsx  PerExerciseDetail.tsx  RecentPRs.tsx  RepDistribution.tsx  Sidebar.tsx  StatsCards.tsx  TonnageTrend.tsx  WeeklySets.tsx
prompts/: canonicalize_exercise.md  explain_findings.md  parse_workout.md  technique_analysis.md
scripts/: init_db.py
src/pwrbot/: __init__.py  __main__.py  config.py  logging_setup.py
tests/: conftest.py  test_api_dashboard.py  test_api_pl.py  test_body_weight.py  test_canonicalize.py  test_catalog.py  test_config.py  test_frame_extractor.py  test_integration_log_analyze.py  test_llm_parser.py  test_max_query.py  test_metrics_calendar.py  test_metrics_e1rm_trend.py  test_metrics_tonnage.py  test_metrics_weekly_sets.py  test_normalize.py  test_one_rm.py  test_powerlifting_metrics.py  test_pr_detection.py  test_preprocess.py  test_prompt_loader.py  test_regex_parser.py  test_repo.py  test_repo_pr.py  test_reporting.py  test_rules_balance.py  test_rules_flags.py  test_rules_volume.py  test_smoke.py  test_technique_service.py  test_video_handler.py
(+106 files in other folders)
