[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pwrbot"
version = "0.1.0"
description = "Local single-user Telegram training diary bot with deterministic rules engine and local Gemma via Ollama"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "aiogram>=3.4.0,<4.0.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "PyYAML>=6.0.1",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "opencv-python-headless>=4.9.0",
    "mediapipe>=0.10.14",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
pwrbot = "pwrbot.__main__:main"
pwrbot-api = "pwrbot.api.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pwrbot = ["db/schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
# RUF001/002/003 flag "ambiguous" unicode in comments/strings — false positives on Russian text
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
